--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,4 +24,4 @@ jobs:
       run: python -m pip install ansible
 
     - name: Execute Ping Playbook
-      run: ansible-playbook ansible/ping.yml -i ansible/inventory
+      run: ansible-playbook ansible/ping.yml -i ansible/inventory.ini
