--- a/ansible/ping.yml
+++ b/ansible/ping.yml
@@ -6,3 +6,9 @@
   tasks:
   - name: Ping
     ansible.builtin.ping:
+    register: ping_result
+
+  - name: Output Message
+    debug:
+      msg: "Ping Succesfull!"
+    when: ping_result is success
